[REFACTOR] 컴파일 경고 수정